<resources>
	<string name="app_name">وكالة سكاي برس</string>
	<string name="app_name_abbr">سكاي برس</string>
	<string name="action_settings">إعدادات</string>
	<string name="action_refresh">تحديث</string>
	<string name="news_title">العناوين الرئيسية</string>
	<string name="title_activity_settings">الإعدادات</string>
	<string name="title_activity_main_news">تفاصيل الخبر</string>

	<string name="navigation_drawer_open">فتح</string>
	<string name="navigation_drawer_close">إغلاق</string>
	<string name="loading">الرجاء الانتظار...</string>
	<string name="general_exception">لقد حصل خطأ ومدير التطبيق قد أنذر. الرجاء المحاولة مرة أخرى.</string>
	<string name="no_connectivity">يبدو أنك غير متصل بشبكة الإنترنت حالياً. الرجاء التأكد من الاتصال بالشبكة والمحاولة مرة أخرى.</string>
	<string name="no_data">المعلومات المطلوبة غير متوفرة حالياً. الرجاء المحاولة مرة أخرى.</string>

	<string name="latest_label">آخر الأخبار</string>
	<string name="local_label">محلي</string>
	<string name="arab_international_label">عربية ودولية</string>
	<string name="economic_label">مال وأعمال</string>
	<string name="analytic_label">مقالات وتقارير</string>
	<string name="sport_label">الأخبار الرياضية</string>
	<string name="art_label">ثقافة وفنون</string>
	<string name="varied_label">منوعة</string>
	<string name="videosite_label">مكتبة الفيديو</string>
	<string name="communicate_label">للتواصل</string>
	<string name="contactUs_label">اتصل بنا</string>
	<string name="aboutUs_label">من نحن</string>
	<string name="share_on_social_media_label">شارك على وسائل التواصل الاجتماعي</string>
	<string name="share_on_social_media_subject"></string>
	<string name="share_on_social_media_body"></string>
	<string name="main_news_read_label">عدد القرّاء</string>

    <string name="notifications_dialog_title">تفعيل إشعارات الخبر العاجل</string>
	<string name="notifications_dialog_cancel">إلغاء</string>
	<string name="notifications_dialog_activate">تفعيل</string>
	<!-- Strings related to Settings -->

	<!-- Settings for Text Size -->
	<string name="pref_header_display">الأحجام والخطوط</string>

	<string name="pref_news_title_text_size">حجم عناوين الخبر</string>
	<string name="pref_news_description_text_size">حجم تفاصيل الخبر</string>
	<string name="small">صغير</string>
	<string name="medium">متوسط</string>
	<string name="large">كبير</string>
	<string name="xlarge">ضخم</string>

    <!-- Settings for Notifications -->
	<string name="pref_header_notifications">الإشعارات</string>

	<string name="pref_title_new_message_notifications">تفعيل الإشعارات للخبر العاجل</string>

	<string name="pref_title_ringtone">نغمة الإشعار</string>
	<string name="pref_ringtone_silent">صامت</string>

	<!-- Contact Us Form -->
	<string name="mandatory_field_validation_message">الخانة مطلوبة</string>
	<string name="email_field_validation_message">البريد الإلكتروني الذي أدخلته غير صحيح</string>
	<string name="contact_us_email_subject">اتصل بنا من: </string>
	<string name="contact_us_name">الاسم</string>
	<string name="contact_us_first_name">الاسم الأول</string>
	<string name="contact_us_last_name">اسم العائلة</string>
	<string name="contact_us_email">البريد الإلكتروني</string>
	<string name="contact_us_email_address">عنوان البريد الإلكتروني</string>
	<string name="contact_us_address">العنوان</string>
	<string name="contact_us_address_hint">العنوان السكني</string>
	<string name="contact_us_subject">سبب الإرسال</string>
	<string name="contact_us_subject_praise">مديح</string>
	<string name="contact_us_subject_suggestion">اقتراح</string>
	<string name="contact_us_subject_complaint">شكوى</string>
	<string name="contact_us_subject_bug">خطأ في التطبيق</string>
	<string name="contact_us_subject_others">أخرى</string>
	<string name="contact_us_body">النص</string>
	<string name="contact_us_send_button">إرسال</string>
	<string name="contact_us_captcha_validation_message">الرموز غير صحيحة، الرجاء المحاولة مرة أخرى</string>
	<string name="contact_us_success_message">لقد تم إرسال طلبكم. سوف نقوم بالتواصل معكم قريباً</string>

	<!-- About us labels -->
	<string name="about_us_listed_lbl">الوكالة</string>
	<string name="about_us_site_lbl">الموقع الإلكتروني</string>
	<string name="about_us_mail_lbl">البريد الإلكتروني</string>
	<string name="about_us_mobile_lbl">الهاتف الأول</string>
	<string name="about_us_mobile2_lbl">الهاتف الثاني</string>
	<string name="about_us_address_lbl">العنوان</string>
	<string name="about_us_facebook_lbl">موقع الفايسبوك</string>
	<string name="about_us_twitter_lbl">موقع تويتر</string>
	<string name="about_us_tube_lbl">موقع يوتيوب</string>
	<string name="about_us_desc">من نحن</string>
	<string name="notifications_dialog_message">يمكنكم تفعيل خدمة إشعارات الخبر العاجل من خلال الضغط على زرّ التفعيل</string>
</resources>
