<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/app_bar_contact_us"
	tools:context="com.ahmad.nabih.skypressprototype.ContactUsActivity">

	<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
		android:id="@+id/contactUs_title"
		android:textSize="14pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/contactUs_label"/>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/contactUs_scroll_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@+id/contactUs_title"
				android:fadingEdgeLength="0dp"
				android:fillViewport="true"
				android:overScrollMode="never"
				android:layout_marginTop="8sp"
				android:scrollbars="none">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_name"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"/>
			<EditText
				android:id="@+id/contact_us_edit_first_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:hint="@string/contact_us_first_name"
				android:layout_marginTop="30dp"/>
			<EditText
				android:id="@+id/contact_us_edit_last_name"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textPersonName"
				android:hint="@string/contact_us_last_name"
				android:layout_marginTop="30dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_email"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="30dp"/>
			<EditText
				android:id="@+id/contact_us_edit_email"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textEmailAddress"
				android:hint="@string/contact_us_email_address"
				android:layout_marginTop="30dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_address"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="30dp"/>
			<EditText
				android:id="@+id/contact_us_edit_address"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textNoSuggestions"
				android:hint="@string/contact_us_address_hint"
				android:layout_marginTop="30dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_subject"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="30dp"/>
			<Spinner
				android:id="@+id/contact_us_subject"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:prompt="@string/contact_us_subject"
				android:entries="@array/contact_us_subject_array"
				android:layout_marginTop="30dp">
			</Spinner>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_body"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="30dp"/>
			<EditText
				android:id="@+id/contact_us_edit_body"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:inputType="textMultiLine"
				android:maxLines="5"
				android:layout_marginTop="10dp"/>
			<ImageView
				android:id="@+id/contact_us_captcha_image"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<ImageView
				android:id="@+id/contact_us_refresh"
				android:src="@drawable/refresh24_icon"
				android:background="@color/colorPrimaryDark"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<EditText
				android:id="@+id/contact_us_captcha_text"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"/>
			<Button
				android:id="@+id/contact_us_edit_button"
				android:layout_height="wrap_content"
				android:text="@string/contact_us_send_button"
				android:onClick="submitContactUsForm"
				android:layout_width="fill_parent"
				android:layout_marginTop="30dp">
			</Button>
		</LinearLayout>
	</ScrollView>

	<!--WebView
		android:id="@+id/contactUs_WebView"
		android:layout_below="@+id/contactUs_title"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent" /-->

</RelativeLayout>
