<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:paddingLeft="@dimen/activity_horizontal_margin"
	android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="@dimen/activity_vertical_margin"
	android:paddingBottom="@dimen/activity_vertical_margin"
	app:layout_behavior="@string/appbar_scrolling_view_behavior"
	tools:showIn="@layout/app_bar_about_us"
	tools:context="com.ahmad.nabih.skypressprototype.AboutUsActivity">

	<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
		android:id="@+id/aboutUs_title"
		android:textSize="14pt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/aboutUs_label"/>

	<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
				android:id="@+id/aboutUs_scroll_view"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:layout_below="@+id/aboutUs_title"
				android:fadingEdgeLength="0dp"
				android:fillViewport="true"
				android:overScrollMode="never"
				android:layout_marginTop="8sp"
				android:scrollbars="none">
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:orientation="vertical">
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_desc"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_description"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_listed_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_listed"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_mail_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_mail"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="email"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_mobile_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_mobile"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="phone"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_mobile2_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_mobile2"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="phone"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_address_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_address"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_facebook_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_facebook"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="web"
				android:layout_marginTop="10dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_twitter_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_twitter"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="web"
				android:layout_marginTop="10dp"/>
			<!--com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/about_us_tube_lbl"
				android:textSize="@dimen/text_size_large"
				android:background="@color/colorPrimaryLight"
				android:layout_marginTop="20dp"/>
			<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
				android:id="@+id/about_us_tube"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:clickable="true"
				android:textColorLink="@color/colorPrimaryDark"
				android:autoLink="web"
				android:layout_marginTop="10dp"/-->
		</LinearLayout>
	</ScrollView>
	<LinearLayout
		android:id="@+id/about_us_exceptions_view"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:orientation="vertical"
		android:visibility="gone">
		<com.ahmad.nabih.skypressprototype.TextViewWithCustomFont
			android:id="@+id/about_us_no_connection"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="10dp"
			android:visibility="gone"/>
		<ImageView
			android:layout_below="@+id/news_listing"
			android:id="@+id/about_us_no_connectivity_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:src="@drawable/alert_icon"
			android:visibility="gone"/>
		<ImageView
			android:layout_below="@+id/news_listing"
			android:id="@+id/about_us_exception_image"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_centerVertical="true"
			android:src="@drawable/alert_icon_1"
			android:visibility="gone"/>
	</LinearLayout>
</RelativeLayout>
